# apui

./: .env.template  .gitattributes  .gitignore  README.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  run-docker-compose.ps1  run-docker-compose.sh
api/: Dockerfile  pyproject.toml  run-poetry-local.ps1  run-poetry-local.sh
api/src/: app_factory.py  config.py  exceptions.py  main.py  routers.py
api/src/api/: __init__.py  auth.py  books.py  books_old.py  config.py  config_db.py  db_setup.py  info.py  main.py  redis.py
api/src/art/: dependencies.py  models.py  router.py  router_old.py  schemas.py
api/src/art/repositories/: author.py  book.py  book_genre.py  i_author.py  i_book.py  i_book_genre.py
api/src/art/services/: author.py  book.py  book_genre.py  i_author.py  i_book.py  i_book_genre.py
api/src/auth/: config.py  dependencies.py  models.py  router.py  schemas.py
api/src/auth/utils/: jwt.py
api/src/config/: __init__.py  cors.py  database.py  google_oauth.py  logging.py  settings.py
api/src/core/: const.py  constants.py  exceptions.py  models.py  schemas.py
api/src/databases/: config.py  connect.py  dependencies.py
api/src/db/: core.py  dependencies.py  setup.py
api/src/dto/: api_response.py
api/src/init/: db_01_create_all.py  db_02_books.py
api/src/middleware/: __init__.py  cors.py  logging.py
api/src/models/: books.py
api/src/orm/: base.py  books.py
api/src/sandbox/db/: router.py  service.py  service_db_01_create_all.py  (+2 more)
api/src/shemas/: api_response.py  books.py
(+17 files in other folders)
